Fix overflow

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -244,7 +244,7 @@ a.link {
 
 .tabs {
   border-radius: 8px;
-  overflow: hidden;
+  overflow: visible;
   
 }
 .tab {
